fix spacing

--- a/tailwind.css
+++ b/tailwind.css
@@ -1191,6 +1191,11 @@ video {
     margin-right: 1.5%;
   }
 
+  .lg\:mx-\[1\%\] {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
   .lg\:ml-20 {
     margin-left: 5rem;
   }
@@ -1201,6 +1206,10 @@ video {
 
   .lg\:ml-\[2\%\] {
     margin-left: 2%;
+  }
+
+  .lg\:ml-\[1\%\] {
+    margin-left: 1%;
   }
 
   .lg\:w-\[200px\] {
